--- a/REST/package.json
+++ b/REST/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "class-validator": "^0.13.2",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
